--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@next-auth/mongodb-adapter": "^1.1.3",
+    "@auth/mongodb-adapter": "^3.11.0",
     "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
     "framer-motion": "^12.23.24",
+    "mongodb": "^6.20.0",
     "mongoose": "^8.19.1",
     "next": "15.5.6",
     "next-auth": "^4.24.11",
